labs/istio-yaml/details-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-dr
spec:
  host: details
  subsets:
  - name: v1
    labels:
      version: v1
