labs/istio-yaml/details-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-vs
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
