labs/istio-yaml/ibmvs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ibm-vs
spec:
  hosts:
  - www.ibm.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - www.ibm.com
    route:
    - destination:
        host: www.ibm.com
        port:
          number: 443
      weight: 100
