labs/istio-yaml/productpage-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage-dr
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
