labs/istio-yaml/reviews-vs-splitting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v2
        weight: 50
      - destination:
          host: reviews
          subset: v3
        weight: 50
