labs/istio-yaml/reviews-vs-steering.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - match:
        - headers:
            end-user:
              exact: foo
      route:
        - destination:
            host: reviews
            subset: v3
    - match:
        - headers:
            end-user:
              regex: ".*\\S+.*"
      route:
        - destination:
            host: reviews
            subset: v2
    - route:
        - destination:
            host: reviews
            subset: v1
